@@ -1,0 +1,73 @@
+/*
+ * Copyright (c) 2010, FRiCKLE Piotr Sikora <info@frickle.com>
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 1. Redistributions of source code must retain the above copyright
+ *    notice, this list of conditions and the following disclaimer.
+ * 2. Redistributions in binary form must reproduce the above copyright
+ *    notice, this list of conditions and the following disclaimer in the
+ *    documentation and/or other materials provided with the distribution.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+ * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
+ * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+ * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
+ * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#define DDEBUG 0
+#include "ngx_postgres_ddebug.h"
+#include "ngx_postgres_escape.h"
+#include "ngx_postgres_module.h"
+
+#include <libpq-fe.h>
+
+
+ngx_int_t
+ngx_postgres_escape_string(ngx_http_request_t *r,
+    ngx_http_variable_value_t *v, uintptr_t data)
+{
+    ngx_postgres_escape_t      *pgesc = (ngx_postgres_escape_t *) data;
+    ngx_http_variable_value_t  *src;
+    u_char                     *p;
+
+    dd("entering: \"$%.*s\"", (int) pgesc->var->name.len,
+                              pgesc->var->name.data);
+
+    src = ngx_http_get_indexed_variable(r, pgesc->idx);
+
+    if ((src == NULL) || (src->not_found)) {
+        v->data = (u_char *) "NULL";
+        v->len = sizeof("NULL") - 1;
+        dd("returning NGX_OK (NULL)");
+        return NGX_OK;
+    }
+
+    v->data = ngx_pnalloc(r->pool, 2 * src->len + 2);
+    if (v->data == NULL) {
+        dd("returning NGX_ERROR");
+        return NGX_ERROR;
+    }
+
+    p = v->data;
+    *p++ = '\'';
+    v->len = PQescapeString((char *) p, (const char *) src->data, src->len);
+    p[v->len] = '\'';
+    v->len += 2;
+
+    v->valid = 1;
+    v->no_cacheable = 0;
+    v->not_found = 0;
+
+    dd("returning NGX_OK");
+    return NGX_OK;
+}
