@@ -20,8 +20,8 @@ our $config = <<'_EOC_';
     location = /auth {
         internal;
 
-        set_quote_sql_str   $user $remote_user;
-        set_quote_sql_str   $pass $remote_passwd;
+        postgres_escape     $user $remote_user;
+        postgres_escape     $pass $remote_passwd;
 
         postgres_pass       database;
         postgres_query      "SELECT login FROM users WHERE login=$user AND pass=$pass";
